# scxmlStateMachine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  stateChart.scxml  statemachine.cpp  statemachine.h  thedatamodel.cpp  thedatamodel.h  widget.cpp  widget.h  widget.ui
